--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,14 +52,10 @@ dependencies:
   socket_io_client: ^2.0.3+1
   intl: ^0.18.1
   collection: ^1.17.2
-  flutter_background_service: ^5.0.1
-  device_info_plus: ^9.1.0
-  flutter_background_service_android: ^6.0.1
-  flutter_local_notifications: ^16.1.0
-  firebase_messaging: ^14.7.0
-  firebase_analytics: ^10.6.0
   flutter_localizations:
     sdk: flutter
+  flutter_hooks: ^0.20.3
+  cached_network_image: ^3.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
